Add JsonReader and JsonWriter, and their tests